--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+.contacts--inner {
+  background-color: #f2f2f2;
+}
+
 .contacts__invitation {
   width: 320px;
   padding: 0 20px 0 20px;
@@ -39,6 +43,11 @@
   .contacts {
     width: 768px;
     padding: 31px 0;
+  }
+
+  .contacts--inner {
+    padding-top: 65px;
+    background-color: #f2f2f2;
   }
 
   .contacts__invitation {
