--- a/sass/blocks/main-nav.scss
+++ b/sass/blocks/main-nav.scss
@@ -6,7 +6,7 @@
 .main-nav__wrapper {
   padding: 14px 20px;
   display: flex;
-  justify-content: space-between;
+  justify-content: stretch;
   align-items: center;
   border-bottom: 1px solid #e6e6e6;
 }
@@ -28,7 +28,9 @@
 }
 
 .main-nav__logo-title {
-  margin: 0 auto;
+  margin: 0;
+  margin-left: 57px;
+  margin-right: auto;
 }
 
 .main-nav__button {
@@ -48,6 +50,11 @@
     top: 50%;
     left: 0;
     background-color: #000000;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
   }
   
   &::before {
@@ -75,17 +82,61 @@
   &:active::after {
     opacity: 0.6;
   }
+
+  &:focus {
+    outline: none;
+  }
+}
+
+.main-nav__button--open {
+
+  &::before,
+  &::after {
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+    -webkit-transform: rotate(0);
+    -moz-transform: rotate(0);
+    -ms-transform: rotate(0);
+    -o-transform: rotate(0);
+    transform: rotate(0);
+  }
+
+  &::before {
+    -webkit-box-shadow: 0 -6px 0 0 #000;
+    -moz-box-shadow: 0 -6px 0 0 #000;
+    box-shadow: 0 -6px 0 0 #000;
+  }
+
+  &::after {
+    top: 18px;
+  }
 }
 
 .main-nav__menu {
+  max-height: 200px;
+  overflow: hidden;
   margin: 0;
   padding: 0;
   list-style-type: none;
   text-align: center;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
-.main-nav__menu-item {
-
+.main-nav__menu--closed {
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
 }
 
 .main-nav__link {
@@ -203,9 +254,27 @@
     }
   }
 
+  .main-nav__link--inner {
+    color: #000000;
+
+    &[href]:hover {
+      color: #707070;
+    }
+
+    &[href]:active {
+      color: #b7b7b7;
+    }
+  }
+
   .main-nav__link--active {
     &::after {
       background-color: #ffffff;
+    }
+  }
+
+  .main-nav__link--inner {
+    &::after {
+      background-color: #68b738;
     }
   }
 }
