--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+.page-footer--inner {
+  background-color: #f2f2f2;
+}
+
 .page-footer__items {
   margin: 0;
   padding: 0;
